implement crud and status report dash board
